--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
   },
   "author": "Sridhar Bandi",
   "license": "MIT",
+  "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.2"
+  },
   "devDependencies": {
-    "protractor": "^5.3.2"
+    "protractor": "^5.4.4"
   }
 }
-
